--- a/my_website/about.html
+++ b/my_website/about.html
@@ -9,7 +9,7 @@
    <a href="index.html">Home</a>
    <a href="about.html">About</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>About Me!</h1>
+    <h1>About Me WOW!</h1> 
     <img src="Images/LIphil.gif" height="250">
   </body>
 </html>
