--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -1,18 +1,17 @@
 <!doctype html>
 	<html lang="en">
 	  <head>
+	        <link href="index.css" rel="stylesheet" type="text/css">
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
-	  <body>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
+	  <body background="giphy.gif">
+    <li><a href="index.html">Home</li></a>
+    <li><a href="about.html">About</li></a>
+    <li><a href="portfolio.html">Portfolio</li></a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br
+    
     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="Images/scratchlogo.png" height="100">
-    </a>
+
 	  </body>
 	</html>
