--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -1,17 +1,20 @@
 <!doctype html>
 	<html lang="en">
 	  <head>
-	        <link href="index.css" rel="stylesheet" type="text/css">
+	        <link href="portfolio.css" rel="stylesheet" type="text/css">
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
 	  <body background="giphy.gif">
-    <li><a href="index.html">Home</li></a>
-    <li><a href="about.html">About</li></a>
-    <li><a href="portfolio.html">Portfolio</li></a>
+	  	<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+    </ul>
     <h1>This is my Portfolio Page!</h1>
     
-    <a target="_blank" href="https://scratch.mit.edu">
+
+    
 
 	  </body>
 	</html>
