--- a/my_website/about.html
+++ b/my_website/about.html
@@ -12,7 +12,7 @@
   </ul>
   <body background="giphy.gif">
     <h2> Kincaid Nguyen</h2>  
-    <p>Hi, my name is Kincaid Nguyen and I am currently<br>a junior at La Quinta High School! Some activities that I <br>enjoy are dancing, listening to music, and spending time<br>with friends or family. Throughout my life, I would like to <br>continuously better myself through the support of <br> those who helped me along the way. My goal is simply<br> to be happy and content with myself, as well as having the <br> capability to impact someone's life in a positive way.<br> I hope to expand my options of potential  abilities<br> through AP Comp Sci! </p>
+    <p>Hi, my name is Kincaid Nguyen and I am currently<br>a junior at La Quinta High School! Some activities that I <br>enjoy are dancing, listening to music, and spending time<br>with friends or family. Throughout my life, I would like to <br>continuously better myself through the support of <br> those who helped me along the way. My goal is simply<br> to be happy and content with myself, as well as having the <br> capability to impact someone's life in a positive way.<br> I look forward to school to share my ideas with others<br>, as well as my passion for dance<br>I hope to expand my options of potential  abilities<br> through AP Comp Sci! </p>
 
   </body>
       
