--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <link href="index.css" rel="stylesheet" type="text/css">
   </head>
-   <ul>
+   <ul id="navbar">
      <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="portfolio.html">Portfolio</a></li>
